addition on extension files and ui optimisation

--- a/client/oneTimeShare.html
+++ b/client/oneTimeShare.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Bootstrap 4 Example</title>
+    <title>One Time Share</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link
@@ -15,7 +15,7 @@
   <body>
     <div class="row-fluid p-3 bg-dark text-white" height=70px>
       <h2>OneTimeShare</h1>
-        <div class="container-fluid  p-3 my-3 border fixed" id="message-container" style="overflow: auto; height: 150px;">
+        <div class="container-fluid  p-3 my-3 border fixed" id="message-container" style="overflow: auto; height: 250px;">
         </div>
       <form class="form-inline" id="pass-form">
         <label for="pwd" class="mr-sm-2">Password:</label>
