--- a/extension/index.html
+++ b/extension/index.html
@@ -1,96 +1,6 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <link
-      rel="stylesheet"
-      href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
-    />
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-    <title>One Time Share</title>
-  </head>
-  <body>
-    <div class="row-fluid p-3 my-3 bg-dark text-white">
-      <header>
-        <h1><i class="fas fa-smile"></i> One Time Share</h1>
-      </header>
-      <form action="oneTimeShare.html" class="needs-validation" novalidate>
-        <div class="form-group">
-          <label for="uname">Username:</label>
-          <input
-            type="text"
-            class="form-control"
-            id="username"
-            placeholder="Enter username"
-            name="username"
-            required
-          />
-          <div class="valid-feedback">Valid.</div>
-          <div class="invalid-feedback">Please fill out this field.</div>
-        </div>
-        <div class="form-group">
-          <label for="room">Room ID:</label>
-          <input
-            type="text"
-            class="form-control"
-            id="room"
-            placeholder="Enter Room ID"
-            name="room"
-            required
-          />
-          <div class="valid-feedback">Valid.</div>
-          <div class="invalid-feedback">Please fill out this field.</div>
-        </div>
-        <div class="form-group form-check">
-          <label class="form-check-label">
-            <input
-              class="form-check-input"
-              type="checkbox"
-              name="remember"
-              required
-            />
-            I agree to use this service at own risk.
-            <div class="valid-feedback">Valid.</div>
-            <div class="invalid-feedback">Check this checkbox to continue.</div>
-          </label>
-        </div>
-        <button type="submit" class="btn btn-primary">Submit</button>
-      </form>
-
-      <script>
-        // Disable form submissions if there are invalid fields
-        (function () {
-          "use strict";
-          window.addEventListener(
-            "load",
-            function () {
-              // Get the forms we want to add validation styles to
-              var forms = document.getElementsByClassName("needs-validation");
-              // Loop over them and prevent submission
-              var validation = Array.prototype.filter.call(forms, function (
-                form
-              ) {
-                form.addEventListener(
-                  "submit",
-                  function (event) {
-                    if (form.checkValidity() === false) {
-                      event.preventDefault();
-                      event.stopPropagation();
-                    }
-                    form.classList.add("was-validated");
-                  },
-                  false
-                );
-              });
-            },
-            false
-          );
-        })();
-      </script>
-    </div>
-  </body>
-</html>
+<!DOCTYPE html>   
+<html>  
+  <body>  
+   <iframe src="http://localhost:3000" style="width:500px; height:500px">  
+  </body>  
+</html>  
